--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
         with:
           platforms: all
       - name: Setup Docker buildx
+        id: buildx
         timeout-minutes: 4
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
       - name: Log into registry
@@ -139,12 +140,13 @@ jobs:
           docker save ${{ steps.short-sha.outputs.sha_tag }} -o /tmp/artifacts/image.tar
           gzip -c /tmp/artifacts/image.tar > /tmp/artifacts/image.tar.gz
       - name: Push image
-        if: github.event_name != 'pull_request'
+        #if: github.event_name != 'pull_request'
         id: push
         timeout-minutes: 25
         uses: docker/build-push-action@7f9d37fa544684fb73bfe4835ed7214c255ce02b
         with:
           context: .
+          builder: ${{ steps.buildx.outputs.name }}
           load: false
           push: true
           tags: ${{ steps.meta.outputs.tags }}
