--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,6 +146,7 @@ jobs:
         uses: docker/build-push-action@7f9d37fa544684fb73bfe4835ed7214c255ce02b
         with:
           context: .
+          buildkitd-flags: --debug
           builder: ${{ steps.buildx.outputs.name }}
           load: false
           push: true
