--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
         with:
           platforms: all
       - name: Setup Docker buildx
+        id: buildx
         timeout-minutes: 4
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
       - name: Log into registry
@@ -141,17 +142,18 @@ jobs:
       - name: Push image
         if: github.event_name != 'pull_request'
         id: push
-        timeout-minutes: 25
+        timeout-minutes: 60
         uses: docker/build-push-action@7f9d37fa544684fb73bfe4835ed7214c255ce02b
         with:
           context: .
+          builder: ${{ steps.buildx.outputs.name }}
           load: false
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64,linux/ppc64le
+          platforms: linux/amd64,linux/arm64
       - name: Upload Container TAR
         if: ${{ github.event_name == 'pull_request' }}
         timeout-minutes: 4
