--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "librdkafka": "^0.0.0",
     "mongoose": "^6.1.5",
     "node-rdkafka": "^2.12.0",
+    "oidc-provider": "^7.10.6",
     "pino": "^7.8.0",
     "pino-pretty": "^7.5.1"
   },
