--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -13,7 +13,15 @@ serviceAccount:
   name: ""
 podAnnotations: {}
 podSecurityContext: {}
-securityContext: {}
+securityContext: 
+  readOnlyRootFilesystem: true
+  runAsUser: 1000
+  runAsGroup: 1000
+  capabilities:
+    drop:
+      - all
+    add:
+      - NET_BIND_SERVICE
 service:
   type: ClusterIP
   port: 80
