--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,25 +34,32 @@ jobs:
   smoke-test:
     name: "Smoke Test"
     runs-on: ubuntu-latest
+    container:
+      image: node:17.6.0-alpine
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - name: Setup Docker buildx
-      timeout-minutes: 4
-      uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
-    - name: Run Smoke Tests
-      id: build
-      timeout-minutes: 25
-      uses: docker/build-push-action@7f9d37fa544684fb73bfe4835ed7214c255ce02b
+    - name: Install Build-Tools
+      run: apk add --update --no-cache python3 make g++ bash
+    - name: Setup Cache
+      uses: actions/cache@v2
       with:
-        context: .
-        file: smoke-test.Dockerfile
-        load: false
-        push: false
-        tags: "smoke-test"
-        labels: "smoke-test"
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        path: ~/.npm
+        key: alpine-hermes-node-${{ hashFiles('package-lock.json') }}
+        restore-keys: |
+          alpine-hermes-node-
+    - name: Install Dependencies
+      run: npm ci
+    - name: Lint
+      run: npm run lint
+    - name: Build
+      run: npm run build
+    - name: Test
+      run: npm test
+    - name: Audit
+      run: npm audit
+    - name: SonarScan
+      run: npm run sonarscan --if-present
   build-container:
     name: "Build Container"
     runs-on: ubuntu-latest
