--- a/.github/workflows/nightly-assesment.yml
+++ b/.github/workflows/nightly-assesment.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Install MicroK8S
         run: |
           sudo snap install microk8s --classic --channel=1.23/stable
-          sudo microk8s enable dns storage rbac ingress metallb
+          sudo microk8s enable dns storage rbac ingress
           sudo microk8s status --wait-ready
           sudo microk8s kubectl rollout status deployment/hostpath-provisioner -n kube-system
           sudo microk8s enable registry
