mount in kube config

--- a/.github/workflows/nightly-assesment.yml
+++ b/.github/workflows/nightly-assesment.yml
@@ -22,5 +22,5 @@ jobs:
           sudo microk8s config > ~/.kube/config
       - name: Kubebench scan
         run: |
-          docker run --pid=host -v $(which kubectl):/usr/local/mount-from-host/bin/kubectl -v /etc:/etc:ro -v /var:/var:ro -t aquasec/kube-bench:latest --version 1.23
+          docker run --pid=host -v $(which kubectl):/usr/local/mount-from-host/bin/kubectl -v /etc:/etc:ro -v /var:/var:ro -v ~/.kube:/.kube -e KUBECONFIG=/.kube/config -t aquasec/kube-bench:latest --version 1.23
       
