--- a/.github/workflows/nightly-assesment.yml
+++ b/.github/workflows/nightly-assesment.yml
@@ -20,7 +20,9 @@ jobs:
           sudo microk8s kubectl rollout status deployment/registry -n container-registry
           mkdir -p ~/.kube
           sudo microk8s config > ~/.kube/config
+      # TODO: Add anisble playbook that remediates issues found in kubebench, apply here then scan
       - name: Kubebench scan
         run: |
           docker run --pid=host -v $(which kubectl):/usr/local/mount-from-host/bin/kubectl -v /etc:/etc:ro -v /var:/var:ro -v ~/.kube:/.kube -e KUBECONFIG=/.kube/config -t aquasec/kube-bench:latest --version 1.23
-      
+      # TODO: Add loop that detects all scanable manifets and runs them through kubsec and opa conftest
+          
