--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,15 @@ jobs:
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: 'scan-results.sarif'
+      - name: Build SBOM
+        id: sbom
+        run: |
+          npm run install:syft
+          npm run docker:sbom --image_tag={{steps.short-sha.outputs.sha_tag}}
+      - name: Upload Container SBOM
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sbom: 'sbom.json'
       - name: Export Container TAR
         timeout-minutes: 4
         run: |
