--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "node_modules/typescript/bin/tsc --project ./ && cp src/config/*.json build/src/config/",
     "docker:build": "docker build -t ghcr.io/bryopsida/hermes-mono:local .",
     "docker:push": "docker push ghcr.io/bryopsida/hermes-mono:local",
+    "docker:sbom": "syft packages $npm_config_image_tag -o cyclonedx-json --file sbom.json",
+    "install:syft": "sudo node scripts/installSyft.js",
     "start": "NODE_CONFIG_DIR=./build/src/config node build/src/monoApp.js",
     "start:dev": "NODE_CONFIG_DIR=./src/config nodemon",
     "start:services": "docker-compose -f docker-compose.yml up -d",
