--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,7 +140,7 @@ jobs:
         id: sbom
         run: |
           npm run install:syft
-          npm run docker:sbom --image_tag={{steps.short-sha.outputs.sha_tag}}
+          npm run docker:sbom --image_tag=${{steps.short-sha.outputs.sha_tag}}
       - name: Upload Container SBOM
         uses: github/codeql-action/upload-sarif@v1
         with:
