--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,9 +142,13 @@ jobs:
           npm run install:syft
           npm run docker:sbom --image_tag=${{steps.short-sha.outputs.sha_tag}}
       - name: Upload Container SBOM
-        uses: github/codeql-action/upload-sarif@v1
+        timeout-minutes: 4
+        uses: actions/upload-artifact@v3
         with:
-          sbom: 'sbom.json'
+          path: sbom.json
+          name: sbom.json
+          retention-days: 30
+          if-no-files-found: error
       - name: Export Container TAR
         timeout-minutes: 4
         run: |
