--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -245,6 +245,30 @@ jobs:
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: kubesec-results.sarif
+  kics-scan:
+    name: KICS Scan
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Run KICS
+        run: |
+          docker pull checkmarx/kics:latest
+          docker run -v $PWD​​​​:/path checkmarx/kics scan -p "/path" -o "/path/" --report-formats "sarif"
+      - name: actions/upload-artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: kics-analysis
+          path: results.sarif
+      - name: Upload KICS scan results to GitHub Security tab
+        if: ${{ env.CODEQL_ENABLED }}
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: results.sarif
   test-deploy:
     name: "Test Deploy"
     needs: [ build-container, smoke-test, helm-lint, kube-scan, analyze ]
