--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -256,9 +256,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Run KICS
+        # delegate job/pr failure to CodeQL upload action, this allows setting the policy in one spot
+        # in github
+        continue-on-error: true
         run: |
           docker pull checkmarx/kics:latest
-          docker run -v ${{ github.workspace }}:/path checkmarx/kics scan -p "/path" -o "/path/" --report-formats "sarif"
+          docker run -v ${{ github.workspace }}:/path checkmarx/kics scan -p "/path" -o "/path/" --report-formats "sarif" --no-progress
       - name: actions/upload-artifact
         uses: actions/upload-artifact@v3
         with:
