--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,8 @@ jobs:
     name: "Smoke Test"
     runs-on: ubuntu-latest
     container:
-      image: node:17.6.0-alpine
+      # TODO: move this to a published image on this repo with the installs pre-done
+      image: node:17.8.0-alpine
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -43,18 +44,6 @@ jobs:
       run: apk add --update --no-cache python3 make g++ bash
     - name: Setup Cache
       uses: actions/cache@v2
-    - name: Setup Docker buildx
-      timeout-minutes: 4
-      uses: docker/setup-buildx-action@2a6fbda6d8bd6fe40f8b36c71fca20ffc286129e
-    - name: Run Smoke Tests
-      id: build
-      timeout-minutes: 25
-      uses: docker/build-push-action@9472e9021074a3cb3279ba431598b8836d40433f
-      with:
-        path: ~/.npm
-        key: alpine-hermes-node-${{ hashFiles('package-lock.json') }}
-        restore-keys: |
-          alpine-hermes-node-
     - name: Install Dependencies
       run: npm ci
     - name: Lint
