--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,12 @@ jobs:
     - name: Install Build-Tools
       run: apk add --update --no-cache python3 make g++ bash
     - name: Setup Cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
+      with:
+        path: ~/.npm
+        key: alpine-node-${{ hashFiles('**/package-lock.json') }}
+        restoreKeys: |
+          alpine-node-
     - name: Install Dependencies
       run: npm ci
     - name: Lint
