--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         path: ~/.npm
         key: alpine-node-${{ hashFiles('**/package-lock.json') }}
-        restoreKeys: |
+        restore-keys: |
           alpine-node-
     - name: Install Dependencies
       run: npm ci
