--- a/helm/hermes/Chart.yaml
+++ b/helm/hermes/Chart.yaml
@@ -20,3 +20,8 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     condition: mongodb.enabled
     alias: mongodb
+  - name: grafana
+    version: "6.26.0"
+    repository: https://grafana.github.io/helm-charts
+    condition: grafana.enabled
+    alias: grafana
