--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -61,3 +61,13 @@ mongodb:
     existingSecret: "hermes-internal-mongodb"
 certmanager:
   enabled: true
+grafana:
+  enabled: true
+  ingress:
+    enabled: true
+    hosts:
+      - grafana.hermes.local
+    tls:
+      - secretName: grafana-hermes-tls
+        hosts:
+          - grafana.hermes.local
