--- a/helm/hermes/envs/lab.yaml
+++ b/helm/hermes/envs/lab.yaml
@@ -18,7 +18,8 @@ kafka:
   zookeeper:
     volumePermissions:
       enabled: true
-    kubernetes.io/arch: amd64
+    nodeSelector:
+      kubernetes.io/arch: amd64
 mongodb:
   volumePermissions:
     enabled: true
