--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,3 +1,3 @@
 sonar.sources=./src
 sonar.tests=./tests
-sonar.typescript.lcov.reportPath=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
