switch to non automatic sonar analysis

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,12 @@ jobs:
       run: npm test
     - name: Audit
       run: npm audit
-    - name: SonarScan
-      run: npm run sonarscan --if-present
+    - name: SonarCloud Scan
+      if: always()
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   build-container:
     name: "Build Container"
     runs-on: ubuntu-latest
