clean up warning in sonarcloud analysis by setting scm property

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.tests=./tests
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.projectKey=bryopsida_hermes
 sonar.organization=bryopsida
+sonar.scm.provider=git
