move security context out to default values

--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -12,8 +12,17 @@ serviceAccount:
   annotations: {}
   name: ""
 podAnnotations: {}
-podSecurityContext: {}
-securityContext: {}
+podSecurityContext:
+  runAsUser: 1000
+  runAsGroup: 1000
+  fsGroup: 1000
+securityContext:
+  allowPrivilegeEscalation: false
+  seccompProfile:
+    type: RuntimeDefault
+  capabilities:
+    drop:
+      - ALL
 service:
   type: ClusterIP
   port: 80
