--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -55,23 +55,58 @@ kafka:
   offsetsTopicReplicationFactor: 1
   transactionStateLogReplicationFactor: 1
   heapOpts: "-Xmx256m -Xms256m"
+  securityContext:
+    allowPrivilegeEscalation: false
+    seccompProfile:
+      type: RuntimeDefault
+    capabilities:
+      drop:
+        - ALL
   zookeeper:
     replicaCount: 1
     heapSize: 256
+    securityContext:
+      allowPrivilegeEscalation: false
+      seccompProfile:
+        type: RuntimeDefault
+      capabilities:
+        drop:
+          - ALL
 redis:
   enabled: true
   architecture: "standalone"
   auth:
     existingSecret: "hermes-internal-redis"
     existingSecretPasswordKey: "redisPassword"
+  securityContext:
+    allowPrivilegeEscalation: false
+    seccompProfile:
+      type: RuntimeDefault
+    capabilities:
+      drop:
+        - ALL
 mongodb:
   enabled: true
   auth:
     existingSecret: "hermes-internal-mongodb"
+  securityContext:
+    allowPrivilegeEscalation: false
+    seccompProfile:
+      type: RuntimeDefault
+    capabilities:
+      drop:
+        - ALL
 certmanager:
   enabled: true
 grafana:
   enabled: true
+  securityContext:
+    allowPrivilegeEscalation: false
+    seccompProfile:
+      type: RuntimeDefault
+    capabilities:
+      drop:
+        - ALL
   rbac:
     create: false
     pspEnabled: false
