fix grafana security context

--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -100,7 +100,7 @@ certmanager:
   enabled: true
 grafana:
   enabled: true
-  securityContext:
+  containerSecurityContext:
     allowPrivilegeEscalation: false
     seccompProfile:
       type: RuntimeDefault
