--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "fastify": "^3.27.4",
     "fastify-helmet": "^7.0.1",
     "librdkafka": "^0.0.0",
+    "lodash": "^4.17.21",
     "middie": "^6.0.0",
     "mongoose": "^6.2.7",
     "node-rdkafka": "^2.12.0",
@@ -59,6 +60,7 @@
     "@types/bull": "^3.15.8",
     "@types/config": "^0.0.41",
     "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.181",
     "@types/node": "^17.0.21",
     "@types/oidc-provider": "^7.8.2",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
