--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
   smoke-test:
     name: "Smoke Test"
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     container:
       # TODO: move this to a published image on this repo with the installs pre-done
       image: node:17.8.0-alpine
