--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "homepage": "https://github.com/bryopsida/hermes#readme",
   "dependencies": {
     "@bull-board/fastify": "^3.10.0",
+    "argon2": "^0.28.5",
     "axios": "^0.26.1",
     "bull": "^4.7.0",
     "config": "^3.3.7",
