update launch.json for seeding tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,6 +40,9 @@
       ],
       "env": {
         "USE_CLUSTERING": "true",
+        "SEED_ADMIN_ACCOUNT": "true",
+        "INITIAL_ADMIN_USER_ACCOUNT": "admin",
+        "INITIAL_ADMIN_PASSWORD": "admin",
         "NODE_CONFIG_DIR": "${workspaceFolder}/src/config"
       }
     },
