--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Add Repos
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo add grafana https://grafana.github.io/helm-charts
           helm repo update
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@main
