--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -459,7 +459,7 @@ jobs:
         helm repo update
         helm --namespace $HELM_NAMESPACE upgrade --install hermes hermes/hermes \
           --debug --devel --wait -f helm/hermes/envs/lab.yaml --set image.repository=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} \
-          --set image.tag=sha-$SHORT_SHA --timeout 10m"
+          --set image.tag=sha-$SHORT_SHA --timeout 10m
     - name: Cleanup Wireguard
       timeout-minutes: 4
       if: always()
