--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -18,6 +18,12 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      - name: Setup Node.JS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: Install Dependencies
+        run: npm ci
       - name: Bump Helm Version
         run: |
           node scripts/bumpHelmVersion.js
