--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -60,17 +60,4 @@ mongodb:
   auth:
     existingSecret: "hermes-internal-mongodb"
 certmanager:
-  enabled: true
-grafana:
-  enabled: true
-  rbac:
-    create: false
-    pspEnabled: false
-  ingress:
-    enabled: true
-    hosts:
-      - grafana.hermes.local
-    tls:
-      - secretName: grafana-hermes-tls
-        hosts:
-          - grafana.hermes.local
+local  enabled: true
