--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "octokit": "^1.7.1",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
