--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "pino-pretty": "^7.5.4"
   },
   "devDependencies": {
+    "@octokit/rest": "^18.12.0",
     "@types/bull": "^3.15.8",
     "@types/config": "^0.0.41",
     "@types/jest": "^27.4.1",
@@ -67,7 +68,6 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
-    "octokit": "^1.7.1",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
