--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -1,10 +1,9 @@
 name: Release Charts
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - "helm/hermes/Chart.yaml"
+  workflow_run:
+    workflows: [Bump Helm Version]
+    types:
+      - completed
 jobs:
   release:
     runs-on: ubuntu-latest
