--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,25 +34,38 @@ jobs:
   smoke-test:
     name: "Smoke Test"
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    container:
+      # TODO: move this to a published image on this repo with the installs pre-done
+      image: node:17.8.0-alpine
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-    - name: Setup Docker buildx
-      timeout-minutes: 4
-      uses: docker/setup-buildx-action@91cb32d715c128e5f0ede915cd7e196ab7799b83
-    - name: Run Smoke Tests
-      id: build
-      timeout-minutes: 25
-      uses: docker/build-push-action@a806b8fe1858aa27c1da44ef4b721a70460b75aa
+    - name: Install Build-Tools
+      run: apk add --update --no-cache python3 make g++ bash
+    - name: Setup Cache
+      uses: actions/cache@v3
       with:
-        context: .
-        file: smoke-test.Dockerfile
-        load: false
-        push: false
-        tags: "smoke-test"
-        labels: "smoke-test"
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        path: ~/.npm
+        key: alpine-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          alpine-node-
+    - name: Install Dependencies
+      run: npm ci
+    - name: Lint
+      run: npm run lint
+    - name: Build
+      run: npm run build
+    - name: Test
+      run: npm test
+    - name: Audit
+      run: npm audit
+    - name: SonarCloud Scan
+      if: always()
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   build-container:
     name: "Build Container"
     runs-on: ubuntu-latest
@@ -195,7 +208,7 @@ jobs:
       - name: Lint Helm Chart
         run: npm run helm:lint
   kube-scan:
-    name: Kubernetes Security Scan
+    name: Kubesec Scan
     runs-on: ubuntu-latest
     permissions:
       actions: read
@@ -231,9 +244,36 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: kubesec-results.sarif
+  kics-scan:
+    name: KICS Scan
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Run KICS
+        # delegate job/pr failure to CodeQL upload action, this allows setting the policy in one spot
+        # in github
+        continue-on-error: true
+        run: |
+          docker pull checkmarx/kics:latest
+          docker run -v ${{ github.workspace }}:/path checkmarx/kics scan -p "/path" -o "/path/" --report-formats "sarif" --no-progress
+      - name: actions/upload-artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: kics-analysis
+          path: results.sarif
+      - name: Upload KICS scan results to GitHub Security tab
+        if: ${{ env.CODEQL_ENABLED }}
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: results.sarif
   test-deploy:
     name: "Test Deploy"
-    needs: [ build-container, smoke-test, helm-lint, kube-scan, analyze ]
+    needs: [ build-container, smoke-test, helm-lint, kube-scan, analyze, kics-scan]
     runs-on: ubuntu-latest
     env: 
       HELM_NAMESPACE: "hermes"
