--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: redis:alpine
     ports:
       - "6379:6379"
+    command: >
+     --requirepass redis 
     volumes:
         - redis:/data
   zookeeper:
@@ -43,9 +45,6 @@ services:
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
     volumes: 
       - kafka:/var/lib/kafka/data
-networks:
-  elastic:
-    driver: bridge
 volumes:
   redis:
   zookeeperdata:
