--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Collects and receives data which is ingested to a processing pipeline which normalizes to prep for watch evaluations, watches trigger alerts",
   "main": "build/monoApp.ts",
   "scripts": {
-    "test": "jest --coverage --testPathPattern='tests/.*\\.spec\\.ts' --testPathIgnorePatterns='tests/.*\\.rest\\.spec\\.ts'",
+    "test": "NODE_CONFIG_DIR=$PWD/src/config/ jest --coverage --testPathPattern='tests/.*\\.spec\\.ts' --testPathIgnorePatterns='tests/.*\\.rest\\.spec\\.ts'",
     "build": "node_modules/typescript/bin/tsc --project ./ && cp src/config/*.json build/src/config/",
     "docker:build": "docker build -t ghcr.io/bryopsida/hermes-mono:local .",
     "docker:push": "docker push ghcr.io/bryopsida/hermes-mono:local",
@@ -41,6 +41,7 @@
   },
   "homepage": "https://github.com/bryopsida/hermes#readme",
   "dependencies": {
+    "argon2": "^0.28.5",
     "@bull-board/fastify": "^3.11.0",
     "axios": "^0.27.2",
     "bull": "^4.8.2",
@@ -48,6 +49,9 @@
     "fastify": "^3.29.0",
     "fastify-helmet": "^7.1.0",
     "librdkafka": "^0.0.0",
+    "lodash": "^4.17.21",
+    "middie": "^6.0.0",
+    "oidc-provider": "^6.27.5",
     "mongoose": "^6.3.2",
     "node-rdkafka": "^2.12.0",
     "pino": "^7.11.0",
@@ -58,7 +62,9 @@
     "@types/bull": "^3.15.8",
     "@types/config": "^0.0.41",
     "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.181",
     "@types/node": "^17.0.21",
+    "@types/oidc-provider": "^7.8.2",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "eslint": "^7.32.0",
@@ -67,8 +73,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^27.5.1",
+    "moq.ts": "^7.3.4",
     "nodemon": "^2.0.15",
+    "proxyquire": "^2.1.3",
     "supertest": "^6.2.2",
+    "testcontainers": "^8.7.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
