--- a/package.json
+++ b/package.json
@@ -41,19 +41,19 @@
   },
   "homepage": "https://github.com/bryopsida/hermes#readme",
   "dependencies": {
-    "argon2": "^0.28.5",
     "@bull-board/fastify": "^3.11.0",
+    "@fastify/helmet": "^8.1.0",
+    "argon2": "^0.28.5",
     "axios": "^0.27.2",
     "bull": "^4.8.2",
     "config": "^3.3.7",
     "fastify": "^3.29.0",
-    "fastify-helmet": "^7.1.0",
     "librdkafka": "^0.0.0",
     "lodash": "^4.17.21",
     "middie": "^6.0.0",
-    "oidc-provider": "^6.27.5",
     "mongoose": "^6.3.2",
     "node-rdkafka": "^2.12.0",
+    "oidc-provider": "^6.27.5",
     "pino": "^7.11.0",
     "pino-pretty": "^7.6.1"
   },
