--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@bull-board/fastify": "^3.11.0",
     "@fastify/helmet": "^8.1.0",
+    "@fastify/oauth2": "^5.0.0",
     "argon2": "^0.28.5",
     "axios": "^0.27.2",
     "bull": "^4.8.2",
