--- a/helm/hermes/envs/lab.yaml
+++ b/helm/hermes/envs/lab.yaml
@@ -14,6 +14,7 @@ certmanager:
   useSelfSignedIssuer: false
   issuerName: letsencrypt-prod
 accountsSecretName: lab-hermes-accounts
+fetchCredentialsSecretName: lab-hermes-fetch-credentials
 kafka:
   volumePermissions:
     enabled: true
