--- a/helm/hermes/templates/secrets.yml
+++ b/helm/hermes/templates/secrets.yml
@@ -23,3 +23,14 @@ data:
   mongodb-password: {{ randAlphaNum 16 | b64enc | quote }}
   mongodb-replica-set-key: {{ randAlphaNum 16 | b64enc | quote }}
 {{- end }}
+{{- if not .Values.fetchCredentialsSecretName }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Release.Name }}-internal-hermes-fetch
+type: Opaque
+data:
+  username: {{ .Values.fetchUsername | b64enc | quote }}
+  password: {{ .Values.fetchPassword | b64enc | quote }}
+{{- end }}
