switch back to gha cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,8 +128,8 @@ jobs:
           push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=ghcr.io/bryopsida/hermes-mono:buildcache
-          cache-to: type=registry,ref=ghcr.io/bryopsida/hermes-mono:buildcache,mode=max
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Get Short SHA
         id: short-sha
         run: |
@@ -182,8 +182,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=ghcr.io/bryopsida/hermes-mono:buildcache
-          cache-to: type=registry,ref=ghcr.io/bryopsida/hermes-mono:buildcache,mode=max
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
       - name: Sign the published Docker image
         if: ${{ github.event_name != 'pull_request' }}
