--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -359,7 +359,7 @@ jobs:
       run: |
         kubectl -n $HELM_NAMESPACE get secret hermes-tls -o jsonpath="{.data['tls\.crt']}" | base64 -d > /tmp/hermes.local.tls.crt
         kubectl -n $HELM_NAMESPACE get secret hermes-root-ca-secret -o jsonpath="{.data['ca\.crt']}" | base64 -d > /tmp/hermes.local.ca.crt
-        sudo mv /tmp/*.crt /usr/local/share/ca-certificates/
+        sudo cp /tmp/*.crt /usr/local/share/ca-certificates/
         sudo update-ca-certificates
     - name: E2E Tests
       timeout-minutes: 10
@@ -367,6 +367,7 @@ jobs:
         TEST_PROTO: "http"
         TEST_HOST: "hermes.local"
         TEST_PORT: "80"
+        NODE_EXTRA_CA_CERTS: /tmp/hermes.local.ca.crt
       run: npm run test:e2e
     - name: Collect Info On Failure
       if: failure()
