--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -364,9 +364,9 @@ jobs:
     - name: E2E Tests
       timeout-minutes: 10
       env:
-        TEST_PROTO: "http"
+        TEST_PROTO: "https"
         TEST_HOST: "hermes.local"
-        TEST_PORT: "80"
+        TEST_PORT: "443"
         NODE_EXTRA_CA_CERTS: /tmp/hermes.local.ca.crt
       run: npm run test:e2e
     - name: Collect Info On Failure
