remove typescript language in codeql as it looks to be doing the same thing as js (go figure)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'javascript', 'typescript' ]
+        language: [ 'javascript']
     permissions:
       actions: read
       contents: read
